# Langchain-chatbot1

./: .env.example  .gitignore  CLAUDE.md  README.md  app1.py  chatbot_ui.py  main.py  pyproject.toml  requirements.txt
notebook-00.ipynb/: notebook01.ipynb
src/: main.py
